--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
     <style type="text/css">
       body {
         background: black;
-        color: red;
+        color: green;
       }
       div.container {
         max-width: 500px;
